...
          tabBarIcon: ({ color, size }) => <ShoppingBag size={size} color={color} />,
        }}
      />
      <Tabs.Screen
        name="cobrar"
        options={{
          title: 'Cobrar',
          href: showVentaCobro ? undefined : null,
          tabBarButtonTestID: 'tab-cobrar',
          tabBarIcon: ({ color, size }) => <CreditCard size={size} color={color} />,
        }}
        listeners={{
          tabPress: (e) => {
...
